--- a/3D Hover Card.html
+++ b/3D Hover Card.html
@@ -1,61 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    .card {
-        margin: 30px;
-        width: 300px;
-        height: 500px;
-        background-color: red;
-        cursor: pointer;
-        object-fit: contain;
-        perspective: 1000;
-        mask-origin: center;
-    }
-
-    img {
-        width: 300px;
-        height: 500px;
-        object-fit: cover;
-    }
-
-    .card :nth-child(2) {
-        position: absolute;
-        opacity: 0;
-    }
-    .card:hover{
-        transform: skewY(30deg);
-    }
-</style>
-
-<body>
-    <div class="main">
-        <div class="card">
-
-            <img src="https://nexodyss.in/cdn/shop/files/metal_sizzae_17e56176-11ab-4468-8b58-420e354f2ec7.jpg?v=1749237230&width=1946" alt="">
-
-            <img src="https://i.pinimg.com/736x/8d/25/8e/8d258e6331c70a5e266ecbebbee915f4.jpg" alt="">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2J5qDG2CU9G0oAk8uqPl8JH22HbVvB3JqwA&s"
-                alt="">
-        </div>
-    </div>
-</body>
-</html> -->
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -63,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D Hover Card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Iceberg&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -74,29 +19,32 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 80px;
             height: 100vh;
-            background-color: #121212;
+            background-color: #707070;
         }
 
         .main {
             perspective: 1000px;
+            position: relative;
         }
 
         .card {
-            width: 300px;
+            width: 350px;
             height: 500px;
             background-color: red;
-            transition: all 0.5s ease;
+            transition: all 0.45s ease;
             transform-style: preserve-3d;
             border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 40px 40px rgba(0, 0, 0, 0.4);
         }
 
         .card:hover {
             transform: rotateX(18deg);
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 60px 50px rgba(0, 0, 0, 0.9);
             cursor: pointer;
+            opacity: .8;
         }
 
         .card img {
@@ -107,27 +55,71 @@
         }
 
         .character-image {
-            width: 300px;
-            height: 500px;
+            width: 500px;
+            height: 525px;
             pointer-events: none;
             position: absolute;
-            top: 0px;
+            top: 60px;
+            left: -60px;
+            object-fit: cover;
             opacity: 0;
-            transform: translateY(100px);
-            transition: all 0.6s ease;
+            transform: translateY(120px);
+            transition: all 0.45s ease;
             z-index: 9;
+        }
+
+        .character-image2 {
+            width: 400px;
+            height: 550px;
+            top: -42px;
+            left: -16px;
         }
 
         .main:hover .character-image {
             position: absolute;
             transform: translateY(0px);
-            opacity: .7;
+            opacity: 1;
         }
-        .text{
+
+        .text {
             color: white;
-            position: relative;
-            bottom: 20px;
+            position: absolute;
+            bottom: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all 0.45s ease;
+            flex-direction: column;
             z-index: 10;
+            left: 37%;
+            transform: translateY(0px);
+        }
+
+        .text2 {
+            color: black;
+        }
+
+        .main:hover .text2 {
+            color: white;
+        }
+
+        .text h1 {
+            color: orange;
+            font-size: 50px;
+            font-family: "Iceberg", sans-serif;
+            letter-spacing: 2px;
+        }
+
+        .text2 h1 {
+            color: #2b44a1;
+            font-size: 50px;
+            font-family: "Iceberg", sans-serif;
+            letter-spacing: 2px;
+        }
+
+        .main:hover .text {
+            bottom: 50px;
+            transform: scale(1.090);
         }
     </style>
 </head>
@@ -135,16 +127,23 @@
 <body>
     <div class="main">
         <div class="card">
-            <!-- <img src="https://i.pinimg.com/736x/8d/25/8e/8d258e6331c70a5e266ecbebbee915f4.jpg" alt="Card Image" /> -->
-            <img src="/Assets/Images/igris.jpg"
-                alt="">
-            <div class="text">
-                <div>Igris</div>
-                <div>Solo Leveling</div>
-            </div>
+            <img src="/Assets/Images/igris.jpg" alt="">
         </div>
-        <img class="character-image"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2J5qDG2CU9G0oAk8uqPl8JH22HbVvB3JqwA&s" alt="">
+        <div class="text">
+            <h1>Igris</h1>
+            <div>Solo Leveling</div>
+        </div>
+        <img class="character-image" src="/Assets/Images/transparent-bg-igris.webp" alt="">
+    </div>
+    <div class="main">
+        <div class="card">
+            <img src="/Assets/Images/gpku1.jpg" alt="">
+        </div>
+        <div class="text text2">
+            <h1>Goku</h1>
+            <div>Dragon Ball</div>
+        </div>
+        <img class="character-image character-image2" src="/Assets/Images/goku-bg.png" alt="">
     </div>
 </body>
 
